# railway-route-generator

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: package-test.yml
planprorunningtrackgenerator/: generator.py
planprorunningtrackgenerator/model/: node.py  running_track.py  signal.py
railwayroutegenerator/: generator.py  planproreader.py  routegenerator.py
railwayroutegenerator/model/: __init__.py  edge.py  node.py  route.py  signal.py  topology.py
test/: complex-example.input  complex-example_test.py  helper.py  line-multiple-signals_test.py  line-test-multiple-signals.input  line-test-multiple-signals.ppxml  line-test.input  line-test.ppxml  line_test.py  point-with-branch.input  point-with-branch.ppxml  point-with-branch_test.py  point-with-other-signal-test.input  point-with-other-signal-test.ppxml  point-with-other-signal_test.py  simple-point-test.input  simple-point-test.ppxml  simple-point_test.py
