[tool.poetry]
name = "railway-route-generator"
version = "5.1"
description = ""
repository="https://github.com/simulate-digital-rail/railway-route-generator"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
packages = [{include = "railwayroutegenerator"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
planpro-importer = {git = "https://github.com/simulate-digital-rail/planpro-importer"}
orm-importer = {git = "https://github.com/simulate-digital-rail/orm-importer"}
pylint = "^2.15.10"
black = "^22.12.0"
pre-commit = "^3.0.0"
coverage = "^7.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
